--- a/templates/guidemap.html
+++ b/templates/guidemap.html
@@ -9,6 +9,8 @@
             </div>
         </div>
     </div>
+    {% endblock %}
+    {% block footer %}
     <footer>
         <div class="footer-top">
             <a href="{% url 'demos:introduce' %}"><i class="ri-service-line"></i></a>
@@ -18,4 +20,9 @@
             <a href="{% url 'demos:qna' %}"><i class="ri-question-answer-fill"></i></a>
         </div>
     </footer>
+    <style>
+        .ri-route-line{
+            color: var(--icon);
+        }
+    </style>
 {% endblock %}
