--- a/templates/home.html
+++ b/templates/home.html
@@ -45,4 +45,9 @@
             <a href="{% url 'demos:qna' %}"><i class="ri-question-answer-fill"></i></a>
         </div>
     </footer>
+    <style>
+        .ri-home-4-line{
+            color: var(--icon);
+        }
+    </style>
 {% endblock %}
