--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1,5 +1,4 @@
 .container {
-  width: 390px;
   height: 100dvh;
   margin: auto;
   display: flex;
@@ -9,7 +8,7 @@
 
 main {
   flex-grow: 1;
-  height: 93dvh;
+  height: 100dvh;
 }
 
 :root {
@@ -27,4 +26,5 @@ main {
   --btn: #AADBFF;
   --white: #fff;
   --gray: #c4c4c4;
+  --icon: #4BCFEA;
 }
