--- a/templates/introduce.html
+++ b/templates/introduce.html
@@ -14,6 +14,8 @@
             </div>
         </div>
     </div>
+    {% endblock %}
+    {% block footer %}
     <footer>
         <div class="footer-top">
             <a href="{% url 'demos:introduce' %}"><i class="ri-service-line"></i></a>
@@ -23,4 +25,9 @@
             <a href="{% url 'demos:qna' %}"><i class="ri-question-answer-fill"></i></a>
         </div>
     </footer>
+    <style>
+        .ri-service-line{
+            color: var(--icon);
+        }
+    </style>
 {% endblock %}
