--- a/templates/qanda.html
+++ b/templates/qanda.html
@@ -24,6 +24,8 @@
             </div>
         </div>
     </div>
+    {% endblock %}
+    {% block footer %}
     <footer>
         <div class="footer-top">
             <a href="{% url 'demos:introduce' %}"><i class="ri-service-line"></i></a>
@@ -33,4 +35,9 @@
             <a href="{% url 'demos:qna' %}"><i class="ri-question-answer-fill"></i></a>
         </div>
     </footer>
+    <style>
+        .ri-question-answer-fill{
+            color: var(--icon);
+        }
+    </style>
 {% endblock %}
