--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -11,13 +11,14 @@
 .option{
     width: 100%;
     height: 5%;
-    padding:5px;
-    margin:10px 0 5px 10px;
+    padding:7px;
     z-index: 1;
+    padding-left: 20px;
+    background-color: var(--blue);
 }
 #keyword{
     border: none;
-    width:70%;
+    width:80%;
     height: 100%;
     background-color: var(--white);
     border-radius: 4px;
@@ -254,14 +255,18 @@
     width: 80%;
 }
 .review-item {
-    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin-block: 10px;
+    margin: 1rem;
     width: 25rem;
     border-radius: 4px;
+    cursor: pointer;
+    padding-inline: 1rem;
 }
-.review-item p {
-    margin-top: 10px;
+.review-item p, .review-item strong{
+    margin-top: 1rem;
+    font-size: 1.4rem;
+}
+#favorite, #myreview{
+    margin-top: 2rem;
 }
 .sort-btn{
     display: flex;
