--- a/static/css/style-lyj.css
+++ b/static/css/style-lyj.css
@@ -118,7 +118,7 @@ p{
     margin-block: 1rem;
 }
 .search-btn {
-    background: white;
+    background: var(--yellow);
     padding:1rem;
     border-radius: 1rem;
     margin-top: 1rem;
@@ -136,13 +136,13 @@ p{
     max-width: 80%;
     text-align: center;
 }
-.introduce_container {
+.introduce_container, .home_container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: white;
-    padding: 30px auto;
+    height: 40%;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     max-width: 80%;
