--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -49,6 +49,8 @@
                     <span id="parkingInfo1"></span>
                 </div>
                 <span id="parkingInfo2"></span>
+                <span id="parkingInfo3"></span>
+                <span id="parkingInfo4"></span>
                 <p id="parkingReview">리뷰
                     <i id="toggle-btn" onclick="toggleReview()" class="ri-arrow-down-s-fill"></i>
                 </p>
@@ -645,6 +647,8 @@
                 var titleElement = document.getElementById('parkingTitle');
                 var infoElement1 = document.getElementById('parkingInfo1'); 
                 var infoElement2 = document.getElementById('parkingInfo2');
+                var infoElement3 = document.getElementById('parkingInfo3');
+                var infoElement4 = document.getElementById('parkingInfo4');
                 var deleteBtn = document.getElementById('delete-btn2');
 
                 if (titleElement && infoElement1 && infoElement2) {
@@ -652,7 +656,11 @@
                     infoElement1.innerText = `${parking.요금정보 || "요금 정보 없음"}주차장`;
                     infoElement2.innerHTML = `
                     주차장 유형: ${parking.주차장유형 || "유형 정보 없음"}<br>
+                    `;
+                    infoElement3.innerHTML = `
                     장애인전용주차구역: ${parking.장애인전용주차구역보유여부 ? "보유" : "미보유"}<br>
+                    `;
+                    infoElement4.innerHTML = `
                     남은자리: ${parking.남은자리}
                     `;
                 }
