--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,8 @@
     <div class="container">
         <header>
             <div class="logo">
-              <a href="{% url 'demos:home' %}">jisungpark</a>
+              <a href="{% url 'demos:home' %}"><img src="{% static 'img/jisungpark1.png' %}" alt="jisungpark" style="display:flex;" width="75">
+              </a>
             </div>
             <div class="header-nav">
                 {% if user.is_authenticated %}
