fix: icon color

--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -45,6 +45,7 @@
     border-radius: 4px;
     font-size: 1.3rem;
     margin-bottom: 2rem;
+    color: black;
 }
 .off-button{
     margin-top: 2.5rem;
