--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <div class="home-container">
             <div class="search-box">    
                 <form id="searchForm">      
-                    <input class = 'form-control' type="input" name="search_txt" placeholder="검색어를 입력하세요" />
+                    <input class = 'form-control' type="input" name="search_txt" placeholder="목적지를 입력하세요" />
                 </form>
             </div>
             <button class="search-btn" onclick="saveSearchTextAndRedirect()">
