--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -36,6 +36,8 @@
         </form>
     </div>
   </div>
+  {% endblock %}
+  {% block footer %}
   <footer>
     <div class="footer-top">
         <a href="{% url 'demos:introduce' %}"><i class="ri-service-line"></i></a>
