--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -29,6 +29,8 @@
       </form>
     </div>
   </div>
+  {% endblock %}
+  {% block footer %}
   <footer>
     <div class="footer-top">
       <a href="{% url 'demos:introduce' %}"><i class="ri-service-line"></i></a>
