--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -38,7 +38,6 @@
 .list-button{
     border: none;
     width: 25%;
-    height: 100%;
     background: var(--btn);
     cursor: pointer;
     font-size: 1.2rem;
@@ -46,6 +45,7 @@
     font-size: 1.3rem;
     margin-bottom: 2rem;
     color: black;
+    padding: 10px;
 }
 .off-button{
     margin-top: 2.5rem;
