--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -389,7 +389,7 @@
                         '장애인전용주차구역보유여부': place['disabled_parking'],
                         '소재지지번주소': place['lot_address'],
                         '남은자리': parseInt(place['available_spots']),
-                        '별점평균': parseFloat(place['average_rating'])
+                        '별점평균': parseFloat(place['average_rating']).toFixed(2) 
                     });
                 }); 
 
